--- a/assets/fashe/css/main.css
+++ b/assets/fashe/css/main.css
@@ -140,7 +140,8 @@ ul, li {
 /* ------------------------------------ */
 input {
 	outline: none;
-	border: none !important;
+	border: none;
+	/* border: none !important; edited*/
 }
 
 textarea {
