--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,126 @@ body {
 	font-family: 'Montserrat';
 }
 
-footer {
-	margin-top: 177px;
+.text-12{
+	font-family: 'Montserrat';
+	font-size: 12px;
+}
+.text-18{
+	font-family: 'Montserrat';
+	font-size: 18px;
 }
 
-a.nounderline {
-	text-decoration: none !important;
-	color: black !important;
+.size-50{
+	max-width: 50px;
+	max-height: 50px;
 }
+
+.mt-30{
+	margin-top: 30px !important;
+}
+.my-15{
+	margin-top: 15px !important;
+	margin-bottom: 15px !important;
+}
+
+.d-block-h-45{
+	display: block;
+	height: 45px;
+}
+.d-block-w-100{
+	display: block;
+	width: 100px;
+}
+
+/* Manajemen akun */
+.flex-column .nav-item a :hover{
+	color: #3D2577;
+}
+.nav-bar-right-white{
+	margin: 30px 13px 0 0;
+	padding: 35px;
+}
+.input-image-profile input[type="file"]{
+	font-size: 14px !important;
+}
+
+/* end manajement akun */
+
+/* Custom Radio */
+/* The custom-radio */
+.custom-radio {
+  display: block;
+  position: relative;
+  padding-left: 21px;
+  margin-bottom: 0px;
+  cursor: pointer;
+  font-size: 16px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default radio button */
+.custom-radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+/* Create a custom radio button */
+.checkmark {
+  position: absolute;
+  top: 3px;
+  left: 0;
+  height: 17px;
+  width: 17px;
+  background-color: #eee;
+  border-radius: 50%;
+}
+
+/* On mouse-over, add a grey background color */
+.custom-radio:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the radio button is checked, add a blue background */
+.custom-radio input:checked ~ .checkmark {
+  background-color: #2196F3;
+}
+
+/* Create the indicator (the dot/circle - hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the indicator (dot/circle) when checked */
+.custom-radio input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the indicator (dot/circle) */
+.custom-radio .checkmark:after {
+ 	top: 5px;
+	left: 5px;
+	width: 7px;
+	height: 7px;
+	border-radius: 50%;
+	background: white;
+}
+
+/* End Custom Radio */
+
+
+
+
+
+
+
+
+
 
 .font-12 {
 	font-size: 10pt;
@@ -27,7 +139,8 @@ a.nounderline {
 
 .logorum {
 	width: auto !important;
-	height: 100px !important;
+	margin-top: -20px;
+	/* height: 100px !important; */
 }
 
 .slide{
