--- a/assets/elaadmin/css/style.css
+++ b/assets/elaadmin/css/style.css
@@ -467,7 +467,7 @@ canvas {
   .order-table tr th {
     background: #e8e9ef; }
   .order-table tr td:last-child, .order-table tr th:last-child {
-    text-align: right; }
+    text-align: left; }
   .order-table tr:last-child td {
     border: none; }
   .order-table .badge {
@@ -615,7 +615,7 @@ aside.left-panel {
       width: 100%; }
       .navbar .navbar-nav li.active .menu-icon, .navbar .navbar-nav li:hover .toggle_nav_button:before,
       .navbar .navbar-nav li .toggle_nav_button.nav-open:before {
-        color: #03a9f3; }
+        color: #E65540; }
       .navbar .navbar-nav li .dropdown-toggle:after {
         display: none; }
       .navbar .navbar-nav li > a {
@@ -628,7 +628,7 @@ aside.left-panel {
         position: relative;
         width: 100%; }
         .navbar .navbar-nav li > a:hover, .navbar .navbar-nav li > a:hover .menu-icon {
-          color: #03a9f3; }
+          color: #E65540; }
         .navbar .navbar-nav li > a .menu-icon {
           color: #607d8b;
           float: left;
@@ -704,7 +704,9 @@ aside.left-panel {
 .navbar .navbar-nav > .active > a,
 .navbar .navbar-nav > .active > a:focus,
 .navbar .navbar-nav > .active > a:hover {
-  color: #03a9f3; }
+  /* color: #03a9f3; */
+  color: #E65540;
+}
 
 .navbar-nav li span.count {
   background: #a9d86e;
@@ -1059,7 +1061,7 @@ header .form-inline {
 .user-area .dropdown-toggle {
   position: relative;
   z-index: 0; }
-  .user-area .dropdown-toggle:before {
+  /* .user-area .dropdown-toggle:before {
     content: "";
     position: absolute;
     right: -3px;
@@ -1069,9 +1071,10 @@ header .form-inline {
     height: 11px;
     border-radius: 100%;
     border: 2px  solid white;
-    z-index: 1; }
-  .user-area .dropdown-toggle.active:before {
-    background: #49a342; }
+    z-index: 1; } */
+  /* .user-area .dropdown-toggle.active:before {
+    background: #49a342; 
+  } */
 
 .dropdown-menu {
   border-radius: 0;
