--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,9 @@ body {
 	font-family: 'Montserrat';
 }
 .nounderline {
-	text-decoration: none;
+	text-decoration: none !important;
 }
+a
 .text-12{
 	font-family: 'Montserrat';
 	font-size: 12px;
@@ -16,6 +17,9 @@ body {
 .size-50{
 	max-width: 50px;
 	max-height: 50px;
+}
+.cover{
+	background-size: cover;
 }
 
 .wh-40{
